--- a/templates/tmux.conf
+++ b/templates/tmux.conf
@@ -56,7 +56,7 @@ set-option -g status-fg yellow #yellow
 set-option -g status-attr dim 
 
 # set window list colors - red for active and cyan for inactive
-set-window-option -g window-status-fg red #base0
+set-window-option -g window-status-fg yellow #base0
 set-window-option -g window-status-bg colour236 
 set-window-option -g window-status-attr dim
 
